--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "nodemon": "nodemon server.js",
-        "start": "node server.js"
+        "nodemon": "nodemon server/server.js",
+        "start": "node server/server.js"
     },
     "keywords": [],
     "author": "",
@@ -14,6 +14,7 @@
     "dependencies": {
         "express": "^4.17.1",
         "hbs": "^4.1.1",
+        "mysql": "^2.18.1",
         "nodemon": "^2.0.4"
     }
 }
