--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
     "name": "covid-info",
     "version": "1.0.0",
     "description": "",
-    "main": "server/server.js",
+    "main": "server.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "nodemon": "nodemon server/server.js",
-        "start": "node server/server.js"
+        "nodemon": "nodemon server.js",
+        "start": "node server.js"
     },
     "keywords": [],
     "author": "",
